@@ -5,6 +5,9 @@ from 2.5.x to 2.6.0
   part to proceed to the operation (restoration, listing, and so on)
 - new featute: support ftp/sftp/scp to write an archive eventually with hash
   files to a remote cloud storage
+- modified behavior: While creating a single sliced archive DUC file is
+  executed unless user interrupted dar/libdar. This to stay coherent with
+  multi sliced archive behavior
 
 from 2.5.8 to 2.5.9
 - fixed typo in documentation about dar internal use of symmetric
